<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharePhoto</string>
	
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册????</string>
    <string name="allphotos">所有图片</string>
    <string name="photos">照片???</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
</resources>
