<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/s50"
    android:background="@color/red"
    android:gravity="center_vertical" >

    <TextView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/s10"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/arrow_left"
        android:gravity="center_vertical"
        android:text="@string/album"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/photos"
        android:textColor="#fff"
        android:textSize="@dimen/s16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/s10"
        android:text="@string/camera_cancel"
        android:textColor="#fff"
        android:textSize="14sp" />

</RelativeLayout>