<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/albumback">

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s50"
        android:background="@color/red"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/s10"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/arrow_left3"
            android:gravity="center_vertical"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/photos"
            android:textColor="#fff"
            android:textSize="@dimen/s16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/s10"
            android:text="@string/camera_cancel"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>


    <com.yellow.customview.MyToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:title="预览" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/s50"
        android:layout_alignParentBottom="true"
        android:background="#e0000000">

        <TextView
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/s10"
            android:text="@string/finish" />
    </RelativeLayout>

    <com.yellow.photo.zoom.ViewPagerFixed
        android:id="@+id/gallery01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:background="@color/plugin_camera_black"
        android:unselectedAlpha="1"/>

</RelativeLayout>